fixed Connect button; Footer and Search z-indexes

--- a/components/buttons/login-button/login-button.module.css
+++ b/components/buttons/login-button/login-button.module.css
@@ -14,4 +14,6 @@
     background-repeat: no-repeat;
     width: 183px;
     height: 43px;
+    background-color: transparent!important;
+    color: #0C0000!important;
 }
