--- a/components/layouts/footer/footer.module.css
+++ b/components/layouts/footer/footer.module.css
@@ -10,7 +10,7 @@
   position: sticky;
   left: 0;
   bottom: 0;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .footerContainer {
