--- a/components/modals/search-modal/SearchModal.module.css
+++ b/components/modals/search-modal/SearchModal.module.css
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 2;
+    z-index: 100;
     animation: fadeIn 0.5s ease-out;
 }
 
@@ -54,6 +54,7 @@
     font-weight: 500;
     max-height: 90vh;
     overflow-y: auto;
+    z-index: 100;
 }
 
 .modalSearchUl::-webkit-scrollbar {
